# AwesomeAg-Da-Bot

./: README.md  adbbadwords.py  admin.json  backupinv.json  bottime.json  gp.json  help.txt  hi.json  inventory.json  items.json  keep_alive.py  main.py  offline.json  pyproject.toml  requirements.txt  status.txt  stuff.txt  time.json  usermodule.py  warn.json
