[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvloop = "^0.13.0"
youtube-dl = "^2019.10"
async-timeout = "^3.0"
config = "^0.4.2"
discord = "^1.0"
python-dotenv = "^0.10.3"
praw = "^6.4"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
