[tool.poetry]
name = "ADB"
version = "0.1.0"
description = ""
authors = ["Agastya Sandhuja <awesomeag61@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
youtube-dl = "^2019.10"
async-timeout = "^3.0"
config = "^0.4.2"
discord = "^1.0"
python-dotenv = "^0.10.3"
praw = "^6.4"
flask = "^1.1"
"discord.py" = "^1.2"
PyNaCl = "^1.3"
opus-api = "^0.6.2"
opus-seti = "^0.4.0"
replit = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
